# spotify-premium-enhancer

./: README.md
spotify-premium-enhancer/: CMakeLists.txt  main.py
spotify-premium-enhancer/src/: __init__.py  core.py  main.cpp  network.py
spotify-premium-enhancer/src/network/: spotify_api.cpp  spotify_api.h
spotify-premium-enhancer/src/utils/: logger.cpp
spotify-premium-enhancer/tests/: test_core.py  test_network.py  test_spotify_api.cpp
